# httplib2-ca_certs_locater

./: .gitignore  README.md  README.rst  announce.rst  ca_certs_locater.py  setup.cfg  setup.py  test_ca_certs_locater.py  tox.ini
