[metadata]
name = httplib2.ca_certs_locater
summary = Plug in to httplib2 to tell it to use the certificate authority file from the base OS instead of the one in the httplib2 package
description-file =
    README.rst
author = New Dream Network, LLC (DreamHost)
author-email = dev-community@dreamhost.com
home-page = https://github.com/dreamhost/httplib2-ca_certs_locater
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
py_modules = ca_certs_locater.py
